--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "cookie-parser": "^1.4.7",
+    "cookie-session": "^2.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "expres": "^0.0.5",
@@ -20,6 +22,6 @@
     "supertest": "^7.0.0"
   },
   "scripts": {
-  "test": "jest"
-}
+    "test": "jest"
+  }
 }
