--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
     "cookie-parser": "^1.4.7",
     "cookie-session": "^2.1.0",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
+    "crypto-js": "^4.2.0",
+    "cryptojs": "^2.5.3",
     "dotenv": "^16.4.7",
     "expres": "^0.0.5",
     "express": "^4.21.2",
