--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "jsonwebtoken": "^9.0.2",
     "nodemon": "^3.1.9",
     "pg": "^8.13.1",
+    "prom-client": "^11.5.3",
     "winston": "^3.17.0"
   },
   "type": "module",
