--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "nodemon": "^3.1.9",
     "pg": "^8.13.1",
     "prom-client": "^11.5.3",
+    "uuid": "^11.0.5",
     "winston": "^3.17.0"
   },
   "type": "module",
